tests/fixtures/invalid/InvalidUseGrouping.php
<?php

namespace App;

use Vendor\Package\SomeNamespace\{SubNamespace\ClassB, SubNamespace\Deep\ClassA};

class InvalidUseGrouping
{
}
